fix: projects card width and alignment and add: quick contact links

--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Cedarville+Cursive&family=Space+Grotesk:wght@300..700&display=swap');
-
+@import "https://www.nerdfonts.com/assets/css/webfont.css";
 
 .header {
     color: #333;
@@ -60,12 +60,23 @@ body {
     word-wrap: break-word; /* Break long words */
 }
 
+.projects{
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5%;
+}
+
 .project-card {
     background: #4c566a;
     color: #e5e9f0;
     padding: 10px;
-    margin: 70px;
+    margin-bottom: 5%;
     border-radius: 5px;
+    display: inline-block;
+    width: 40%;
+    height:min-content;
     box-shadow: 10px 5px 5px #3b4252;
     box-sizing: border-box; /* Ensure padding and border are included in the width and height */
     overflow: hidden; /* Hide overflow content */
@@ -120,4 +131,19 @@ body {
     margin: 10px; /* Add some margin if needed */
     width: 550px;
     height: 200px;
+}
+
+.quick-access {
+    font-family: "Space Grotesk", sans-serif;
+    font-size: x-large;
+    color: #2e3440;
+    margin: 0px;
+    text-decoration: none;
+}
+
+.quick-access-container {
+    top: 0;
+    right: 0;
+    position: absolute;
+    margin-right: 10px;
 }
